--- a/SmartLiving/templates/test.html.twig
+++ b/SmartLiving/templates/test.html.twig
@@ -1,3 +1,1 @@
-<a href="{{ path('employee_add') }}">Create new Employee</a>
-<a href="{{ path('order_add') }}">Create new Order</a>
-<a href="{{ path('product_add') }}">Create new product</a>
+<p>Test Page</p>
