ajout de dosscier images css + navbar twig

--- a/SmartLiving/templates/test.html.twig
+++ b/SmartLiving/templates/test.html.twig
@@ -1,1 +1,7 @@
-<p>Test Page</p>
+{% extends 'base.html.twig' %}
+
+{% block body %}
+    <p class="btn btn-secondary">Test Page</p>
+
+{% endblock %}
+
