--- a/SmartLiving/public/css/style.css
+++ b/SmartLiving/public/css/style.css
@@ -3,3 +3,15 @@
     padding-left: 0;
     padding-right: 0;
 }
+
+/*---  Logo ---*/
+
+.logo-desktop{
+    height: 40px;
+    width: auto;
+}
+
+.logo-mobile{
+    height: 40px;
+    width: auto;
+}
