--- a/SmartLiving/templates/includes/navbar.html.twig
+++ b/SmartLiving/templates/includes/navbar.html.twig
@@ -1,12 +1,14 @@
-
+<div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
             {% if is_mobile() == true %}
-            <img src=" {{ asset('images/icons/logo-mobile.svg')}} " alt="logo" class="logo-desktop"> {{ is_mobile()}}
-        {% else %}
-        <img src=" {{ asset('images/icons/logo-desktop.svg')}} " alt="logo" class="logo-mobile"> {{ is_mobile()}} </a>
-        {% endif %}
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <img src=" {{ asset('images/icons/logo-mobile.svg') }} " alt="" class="logo-mobile">
+            {% else %}
+                <img src=" {{ asset('images/icons/logo-desktop.svg') }} " alt="" class="logo-desktop">
+            {% endif %}
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -14,7 +16,7 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
 
-                    <a class="nav-link" href="#">  <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
@@ -29,3 +31,4 @@
             </form>
         </div>
     </nav>
+</div>
