--- a/SmartLiving/templates/product/index.html.twig
+++ b/SmartLiving/templates/product/index.html.twig
@@ -8,7 +8,7 @@
         <div class="row m-0">
             <div class="col-sm-12 p-0">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
+                    <ol class="carousel-indicators carousel-indicators-product-list">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
