--- a/SmartLiving/templates/product/show.html.twig
+++ b/SmartLiving/templates/product/show.html.twig
@@ -1,58 +1,230 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Product{% endblock %}
-
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/product/product_show.css') }}">
+{% endblock %}
 {% block body %}
-    <h1>Product</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ product.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ product.title }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ product.description }}</td>
-            </tr>
-            <tr>
-                <th>Status</th>
-                <td>{{ product.status }}</td>
-            </tr>
-            <tr>
-                <th>Photo</th>
-                <td>{{ product.photo }}</td>
-            </tr>
-            <tr>
-                <th>UnitPrice</th>
-                <td>{{ product.unitPrice }}</td>
-            </tr>
-            <tr>
-                <th>Stock</th>
-                <td>{{ product.stock }}</td>
-            </tr>
-            <tr>
-                <th>RestockDate</th>
-                <td>{{ product.restockDate ? product.restockDate|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>StockMin</th>
-                <td>{{ product.stockMin }}</td>
-            </tr>
-            <tr>
-                <th>DateAdded</th>
-                <td>{{ product.dateAdded ? product.dateAdded|date('Y-m-d') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+<div class="container-fluid">
+    <section>
+        <h1 class="text-center p-3 title-show">{{ product.title }}</h1>
+            <div class="row m-0">
+                <div class="col-sm-12 p-0">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators carousel-indicators-details">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner d-flex">
+                            <div class="carousel-item active v-w-100">
+                                <img src="{{ asset('images/placeholder.png') }}" class="d-block w-75 w-md-25 mx-auto" alt="...">
+                                <div class="row mx-0 my-4">
+                                    <div class="col-8  d-flex justify-content-around details-block">
+                                        <div class="p-1 py-4">
+                                            <div class="ratings-stars text-center">
+                                                <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                                <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                                <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                                <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                                <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                            </div>
+                                            <p class="product-price text-center article-title">2500€</p>
+                                        </div>
+                                        <div class="p-1 mt-4">
+                                            <p class="text-center text-show">60 Avis</p>
+                                            <input type="number" min="1" max="10" value="1" class="form-control text-center quantity-selector">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="{{ asset('images/placeholder.png') }}" class="d-block w-75 w-md-25 mx-auto" alt="...">
+                                <div class="row mx-0 my-4">
+                                    <div class="col-8  d-flex justify-content-around details-block">
+                                        <div class="p-1 py-4">
+                                            <div class="ratings-stars text-center">
+                                                <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                                <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                                <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                                <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                                <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                            </div>
+                                            <p class="product-price text-center article-title">2500€</p>
+                                        </div>
+                                        <div class="p-1 mt-4">
+                                            <p class="text-center text-show">60 Avis</p>
+                                            <input type="number" min="1" max="10" value="1" class="form-control text-center quantity-selector">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        <div class="carousel-item">
+                            <img src="{{ asset('images/placeholder.png') }}" class="d-block w-75 w-md-25 mx-auto" alt="...">
+                            <div class="row mx-0 my-4">
+                                <div class="col-8  d-flex justify-content-around details-block">
+                                    <div class="p-1 py-4">
+                                        <div class="ratings-stars text-center">
+                                            <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                            <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                            <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                            <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                            <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                                        </div>
+                                        <p class="product-price text-center article-title">2500€</p>
+                                    </div>
+                                    <div class="p-1 mt-4">
+                                        <p class="text-center text-show">60 Avis</p>
+                                        <input type="number" min="1" max="10" value="1" class="form-control text-center quantity-selector">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                        </div>
+                        <a class="carousel-control-prev d-none d-md-flex" href="#carouselExampleIndicators" role="button"
+                           data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next d-none d-md-flex" href="#carouselExampleIndicators" role="button"
+                           data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            <div class="row  m-0">
+                    <div class="col-12 p-0 d-flex justify-content-center">
+                        <button class="btn btn-primary">Ajouter au panier<img src="{{ asset('images/icons/cart_icon.svg') }}" class="cart-icon"></button>
+                    </div>
+                </div>
+    </section>
+    <section class="pt-5">
+        <p class="text-center article-title">Description du produit</p>
+        <p class="mx-5 text-show">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Praesent non mattis nunc, nec sollicitudin leo.
+            Mauris nec nisi non erat faucibus feugiat ac quis sem.
+            Suspendisse vel risus volutpat, suscipit tortor eget, ornare velit.
+            Suspendisse scelerisque nec risus a pretium.
+            In vehicula, nulla vitae interdum hendrerit, augue erat lacinia mauris, sed consectetur purus erat quis libero.
+            Aliquam suscipit neque a leo fringilla auctor.
+            Maecenas hendrerit suscipit odio, aliquam bibendum leo tempus quis.
+        </p>
+    </section>
+    <section class="mt-5">
+        <p class="text-center article-title">Avis</p>
+{#        delimiter FOREACH#}
+        <div class="separator"></div>
+        <div class="m-5">
+            <div class="row m-0">
+                <div class="col-6">
+                    <p class="username">Luke Skywalker</p>
+                    <p class="date">12 juin 2020</p>
+                </div>
+                <div class="col-6">
+                    <div class="ratings-stars text-center">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                    </div>
+                </div>
+            </div>
+            <div class="row m-0">
+                <div class="col-12 text-show">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent non mattis nunc, nec sollicitudin leo.
+                Mauris nec nisi non erat faucibus feugiat ac quis sem.
+                Suspendisse vel risus volutpat, suscipit tortor eget, ornare velit.
+                Suspendisse scelerisque nec risus a pretium.
+                </div>
+            </div>
+        </div>
+{#        end delimiter FOREACH#}
+        <div class="separator"></div>
+        <div class="m-5">
+            <div class="row m-0">
+                <div class="col-6">
+                    <p class="username">Luke Skywalker</p>
+                    <p class="date">12 juin 2020</p>
+                </div>
+                <div class="col-6">
+                    <div class="ratings-stars text-center">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                    </div>
+                </div>
+            </div>
+            <div class="row m-0">
+                <div class="col-12 text-show">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Praesent non mattis nunc, nec sollicitudin leo.
+                    Mauris nec nisi non erat faucibus feugiat ac quis sem.
+                    Suspendisse vel risus volutpat, suscipit tortor eget, ornare velit.
+                    Suspendisse scelerisque nec risus a pretium.
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center">
+            <button class="border-0 bg-transparent">Voir plus</button>
+        </div>
+    </section>
+    <section class="row m-0 my-4 d-flex justify-content-center">
+        <div class="form-show form-border">
+            <form class="col-12">
+                <div class="row m-0 mt-4 mx-2">
+                    <p class="text-center col-12 article-title">Ecrire un avis</p>
+                    <div class="ratings-stars col-12 text-center">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                        <img class="rating-stars mx-0" src="{{ asset('images/icons/star_ratings_full.svg') }}">
+                    </div>
 
-    <a href="{{ path('product_index') }}">back to list</a>
+{#                    test star rating#}
 
-    <a href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
+{#                        <div class="row">#}
+{#                            <div class="col-lg-12">#}
+{#                                <div class="star-rating-js">#}
+{#                                    <span class="fa fa-star-o" data-rating="1"></span>#}
+{#                                    <span class="fa fa-star-o" data-rating="2"></span>#}
+{#                                    <span class="fa fa-star-o" data-rating="3"></span>#}
+{#                                    <span class="fa fa-star-o" data-rating="4"></span>#}
+{#                                    <span class="fa fa-star-o" data-rating="5"></span>#}
+{#                                    <input type="hidden" name="whatever1" class="rating-value" value="2.56">#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
 
-    {{ include('product/_delete_form.html.twig') }}
+{#                    end test star rating#}
+
+                </div>
+                <div class="row m-0 m-2">
+                    <label class="col-12">Nom</label>
+                    <input type="text" class="col-12 form-border form-control">
+                </div>
+                <div class="row m-0 m-2">
+                    <label class="col-12">Avis</label>
+                    <textarea class="col-12 form-border form-control" rows="11"></textarea>
+                </div>
+                <div class="row m-0 m-2 mt-4">
+                    <button type="button" class="btn btn-primary text-show">Enregistrer l'avis</button>
+                </div>
+            </form>
+        </div>
+    </section>
+</div>
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/Product/product_show.js') }}"></script>
 {% endblock %}
