--- a/SmartLiving/templates/security/login.html.twig
+++ b/SmartLiving/templates/security/login.html.twig
@@ -5,7 +5,7 @@
          {{ parent() }}
 
         <!-- CUSTOM CSS -->
-        <link rel="stylesheet" href="{{ asset('css/login-form.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/modal.css') }}">
     {% endblock %}
 {% block body %}
     <div class="main-content-wrapper row">
