--- a/SmartLiving/public/css/modal.css
+++ b/SmartLiving/public/css/modal.css
@@ -3,13 +3,63 @@
 .main-content-wrapper{
     min-height: 100vh;
     background-color: #CCCCF3;
+}
 
+/* MODAL BODY*/
+.account-details-modal-main-wrapper{
+    display: none;
+}
+.account-details-modal-background{
+    position: absolute;
+    min-height: 100vh;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(204, 204, 243, 0.68);
+    z-index: 10;
 }
 
 .form-wrapper{
     max-width: 700px;
     border-radius: 10px;
     background-color: #FFFFFF;
+}
+.margin-top-18px{
+    margin-top: 18px;
+}
+
+/* allow cross to have absolute position by making parent relative */
+
+.account-detail-block{
+    position: relative;
+}
+
+/*  CROSS TO DISMISS POPUP */
+.close {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 20px;
+    height: 20px;
+    opacity: 0.4;
+}
+.close:hover {
+    opacity: 1;
+}
+.close:before, .close:after {
+    position: absolute;
+    content: ' ';
+    height: 25px;
+    width: 2px;
+    background-color: #707070;
+    border-radius: 10px;
+}
+.close:before {
+    transform: rotate(45deg);
+}
+.close:after {
+    transform: rotate(-45deg);
 }
 
 .separator-login-title{
