ajout de fonctionalités: modifier les details de compte

--- a/SmartLiving/templates/account/account.html.twig
+++ b/SmartLiving/templates/account/account.html.twig
@@ -69,7 +69,7 @@
                         <h3 class="title-h3-midnight-blue">Mot de passe :</h3>
                         <p class="p-black">**********</p>
                     </div>
-                    <button class=" col-3 btn lavender-modify-button ml-auto">Modifier</button>
+                    <a class=" col-3 btn lavender-modify-button ml-auto" href=" {{ path('app_change_password') }}">Modifier</a>
                 </div>
                 <div class="separator-lavender-account"></div>
             </div>
