--- a/SmartLiving/public/css/modal.css
+++ b/SmartLiving/public/css/modal.css
@@ -1,8 +1,14 @@
-
+/* Toggle Overflow on body when modal is on */
+.overflow-hidden{
+    overflow: hidden;
+}
 /*------------------  LOGIN & SIGNUP & USER & SECURITY  -----------------------*/
 .main-content-wrapper{
     min-height: 100vh;
     background-color: #CCCCF3;
+}
+.main-content-wrapper-small{
+
 }
 
 /* MODAL BODY*/
@@ -11,7 +17,6 @@
 }
 .account-details-modal-background{
     position: absolute;
-    min-height: 100vh;
     top: 0;
     bottom: 0;
     left: 0;
@@ -22,6 +27,12 @@
 
 .form-wrapper{
     max-width: 700px;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+}
+
+.form-wrapper-small{
+    max-width: 500px;
     border-radius: 10px;
     background-color: #FFFFFF;
 }
@@ -159,4 +170,11 @@
 }
 .signup-link:hover{
     color: #F1D23D;
+}
+
+/*    Images   */
+
+.width-100px{
+    width: 100px;
+    height:auto;
 }
