mise à jour de la db - ajour de la relation entre client et la commande

--- a/SmartLiving/templates/account/account.html.twig
+++ b/SmartLiving/templates/account/account.html.twig
@@ -80,34 +80,34 @@
             <div class="col-11 col-lg-6 ml-0 ml-lg-5 mt-5 mt-lg-0">
 
                 {# Orders #}
-                <div class="row no-gutters powder-blue-account-card  align-items-center">
+                <a href="{{ path('app_orders') }}" class="row no-gutters powder-blue-account-card align-items-center text-decoration-none">
                     <img class="col-3 account-link-icon" src="{{ asset('images/icons/package-icon.svg') }} "
                          alt="package icon">
                     <div class="col-8 ml-3">
                         <h3 class="title-h3-midnight-blue">Mes commandes</h3>
                         <p class="p-gray">Suivre, retourner ou acheter à nouveau</p>
                     </div>
-                </div>
+                </a>
 
                 {# Addresses #}
-                <div class="row no-gutters powder-blue-account-card  align-items-center mt-5">
+                <a class="row no-gutters powder-blue-account-card  align-items-center mt-5 text-decoration-none">
                     <img class="col-3 account-link-icon" src="{{ asset('images/icons/location-icon.svg') }} "
                          alt="location icon">
                     <div class="col-8 ml-3">
                         <h3 class="title-h3-midnight-blue">Mes adresses</h3>
                         <p class="p-gray">Modifier les adresses et les préférences de livraison des commandes</p>
                     </div>
-                </div>
+                </a>
 
                 {# Addresses #}
-                <div class="row no-gutters powder-blue-account-card  align-items-center mt-5">
+                <a class="row no-gutters powder-blue-account-card  align-items-center mt-5 text-decoration-none">
                     <img class="col-3 account-link-icon" src="{{ asset('images/icons/credit-card-icon.svg') }} "
                          alt="location icon">
                     <div class="col-8 ml-3">
                         <h3 class="title-h3-midnight-blue">Mes paiements</h3>
                         <p class="p-gray">Gérer mes modes de paiement</p>
                     </div>
-                </div>
+                </a>
 
             </div>
 
